0.6.10/_sources/gettingstarted/examples/gallery/auto_examples_core/d_plotting/plot_plotting.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_core/d_plotting/plot_plotting.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_d_plotting_plot_plotting.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_core_d_plotting_plot_plotting.py:


Introduction to the plotting librairie
=======================================

.. GENERATED FROM PYTHON SOURCE LINES 15-18

.. code-block:: default


    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 19-20

The location of the spectrochempy_data can be found in preferences

.. GENERATED FROM PYTHON SOURCE LINES 20-23

.. code-block:: default


    datadir = scp.preferences.datadir








.. GENERATED FROM PYTHON SOURCE LINES 24-25

Let's read on of the dataset (in `spg` Omnnic format)

.. GENERATED FROM PYTHON SOURCE LINES 25-28

.. code-block:: default


    dataset = scp.NDDataset.read_omnic(datadir / "irdata" / "nh4y-activation.spg")








.. GENERATED FROM PYTHON SOURCE LINES 29-30

First we do a generic plot (with the default style):

.. GENERATED FROM PYTHON SOURCE LINES 30-33

.. code-block:: default


    ax = dataset[0].plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plotting_001.png
   :alt: plot plotting
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plotting_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 34-35

plot generic style

.. GENERATED FROM PYTHON SOURCE LINES 35-38

.. code-block:: default


    ax = dataset[0].plot(style="classic")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plotting_002.png
   :alt: plot plotting
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plotting_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 39-41

check that style reinit to default
should be identical to the first one

.. GENERATED FROM PYTHON SOURCE LINES 41-43

.. code-block:: default

    ax = dataset[0].plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plotting_003.png
   :alt: plot plotting
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plotting_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 44-45

Multiple plots

.. GENERATED FROM PYTHON SOURCE LINES 45-52

.. code-block:: default

    dataset = dataset[:, ::100]

    datasets = [dataset[0], dataset[10], dataset[20], dataset[50], dataset[53]]
    labels = ["sample {}".format(label) for label in ["S1", "S10", "S20", "S50", "S53"]]

    _ = scp.plot_multiple(method="scatter", datasets=datasets, labels=labels, legend="best")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plotting_004.png
   :alt: plot plotting
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plotting_004.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 53-54

plot multiple with style

.. GENERATED FROM PYTHON SOURCE LINES 54-58

.. code-block:: default

    _ = scp.plot_multiple(
        method="scatter", style="sans", datasets=datasets, labels=labels, legend="best"
    )




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plotting_005.png
   :alt: plot plotting
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plotting_005.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 59-60

check that style reinit to default

.. GENERATED FROM PYTHON SOURCE LINES 60-62

.. code-block:: default

    _ = scp.plot_multiple(method="scatter", datasets=datasets, labels=labels, legend="best")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plotting_006.png
   :alt: plot plotting
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plotting_006.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 63-65

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python

.. GENERATED FROM PYTHON SOURCE LINES 65-67

.. code-block:: default


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.518 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_d_plotting_plot_plotting.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_plotting.py <plot_plotting.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_plotting.ipynb <plot_plotting.ipynb>`
