0.11.0/_sources/gettingstarted/examples/gallery/auto_examples_core/d_plotting/plot_plotting.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_core/d_plotting/plot_plotting.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_d_plotting_plot_plotting.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_core_d_plotting_plot_plotting.py:


Introduction to the plotting library
====================================

This short gallery example shows three common ideas:

- the default ``dataset.plot()`` entry point;
- per-call style changes that do not mutate later plots;
- ``plot_multiple()`` overlaying several 1D datasets on one shared axes.

.. GENERATED FROM PYTHON SOURCE LINES 19-26

.. code-block:: default


    import os
    from pathlib import Path

    import numpy as np
    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 27-28

The location of the spectrochempy_data can be found in preferences.

.. GENERATED FROM PYTHON SOURCE LINES 28-34

.. code-block:: default


    datadir = scp.preferences.datadir
    TEST_FILE = Path(
        os.environ.get("TEST_FILE", datadir / "irdata" / "nh4y-activation.spg")
    )








.. GENERATED FROM PYTHON SOURCE LINES 35-36

Let's read one dataset (in ``.spg`` OMNIC format).

.. GENERATED FROM PYTHON SOURCE LINES 36-39

.. code-block:: default


    dataset = scp.read(TEST_FILE)








.. GENERATED FROM PYTHON SOURCE LINES 40-41

First use the default plotting entry point and default style.

.. GENERATED FROM PYTHON SOURCE LINES 41-44

.. code-block:: default


    ax = dataset[0].plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plotting_001.png
   :alt: plot plotting
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plotting_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 45-46

Apply a different style to this single plot only.

.. GENERATED FROM PYTHON SOURCE LINES 46-49

.. code-block:: default


    ax = dataset[0].plot(style="classic")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plotting_002.png
   :alt: plot plotting
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plotting_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 50-52

Style selection is local to the previous call, so the default style is used
again here.

.. GENERATED FROM PYTHON SOURCE LINES 52-54

.. code-block:: default

    ax = dataset[0].plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plotting_003.png
   :alt: plot plotting
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plotting_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 55-56

``plot_multiple()`` overlays several 1D datasets on one shared axes.

.. GENERATED FROM PYTHON SOURCE LINES 56-65

.. code-block:: default

    dataset = dataset[:, ::100]

    sample_indices = np.linspace(0, dataset.shape[0] - 1, 5, dtype=int)
    datasets = [dataset[index] for index in sample_indices]
    labels = [f"sample {index}" for index in sample_indices]

    # Use ``method="scatter"`` when the visual intent is marker-based.
    _ = scp.plot_multiple(method="scatter", datasets=datasets, labels=labels, legend="best")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plotting_004.png
   :alt: plot plotting
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plotting_004.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 66-67

As above, the style change applies only to this call.

.. GENERATED FROM PYTHON SOURCE LINES 67-71

.. code-block:: default

    _ = scp.plot_multiple(
        method="scatter", style="sans", datasets=datasets, labels=labels, legend="best"
    )




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plotting_005.png
   :alt: plot plotting
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plotting_005.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 72-73

The default style is used again on the next call.

.. GENERATED FROM PYTHON SOURCE LINES 73-75

.. code-block:: default

    _ = scp.plot_multiple(method="scatter", datasets=datasets, labels=labels, legend="best")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plotting_006.png
   :alt: plot plotting
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plotting_006.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 76-78

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python

.. GENERATED FROM PYTHON SOURCE LINES 78-80

.. code-block:: default


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.688 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_d_plotting_plot_plotting.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_plotting.py <plot_plotting.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_plotting.ipynb <plot_plotting.ipynb>`
